--- a/app/assets/admin/css/sass/_tooltip.scss
+++ b/app/assets/admin/css/sass/_tooltip.scss
@@ -87,3 +87,7 @@
 		}
 	}
 }
+
+input[type=file] {
+	width: 90px;
+}
